<?xml version="1.0"?>
<package>
  <name>neo_robot_descriptions</name>
  <version>0.1.0</version>
  <description>The neo_robot_descriptions package</description>
  <maintainer email="nieland@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Jan-Niklas Nieland</author>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
